* updating gnome-shell theme

--- a/gnome-shell-frugalware-theme/theme/calendar.css
+++ b/gnome-shell-frugalware-theme/theme/calendar.css
@@ -2,113 +2,126 @@
 
 #calendarEventsArea {
     /* this is the width of the second column of the popup */
-    min-width: 220px;
+    min-width: 200px;
 }
 
 .calendar-vertical-separator {
     -stipple-width: 1px;
-    -stipple-color: #555;
-    width: 3px;
+    -stipple-color: #505050;
+    width: 0.8em;
+}
+
+#calendarPopup {
+    border: 1px solid rgba(255,255,255,0.5);
+    border-radius: 0px 0px 4px 4px;
+    color: rgba(0,0,0,0.6);
+}
+
+#calendarPopup .calendar {
+    padding: 10px;
 }
 
 .calendar {
-    padding: 0em 1.5em .45em 1.5em;
+    padding: .2em .2em;
     spacing-rows: 0px;
     spacing-columns: 0px;
 }
 
 .calendar-month-label {
-    color: #ccc;
-    font-size: 7.5pt;
+    color: #fff;
+    font-size: 8pt;
     font-weight: bold;
-    padding-top: 1.8em;
-    padding-bottom: 1.8em;
+    text-shadow: rgba(0,0,0,0.4) 0px -1px 0px;
 }
 
 .calendar-change-month-back {
-    width: 18px;
-	height: 12px;
     background-image: url("img/calendar-arrow-left.svg");
+    height: 12px;
+    width: 12px;
 }
 
-.calendar-change-month-back:hover,
-.calendar-change-month-back:active {
-    background-image: url("img/calendar-arrow-left-hover.svg");
-}
 
 .calendar-change-month-back:rtl {
     background-image: url("img/calendar-arrow-right.svg");
 }
 
-.calendar-change-month-back:rtl:hover,
-.calendar-change-month-back:rtl:active {
-    background-image: url("img/calendar-arrow-right-hover.svg");
+.calendar-change-month-back:hover {
+}
+
+.calendar-change-month-back:active {
 }
 
 .calendar-change-month-forward {
-    width: 18px;
-	height: 12px;
     background-image: url("img/calendar-arrow-right.svg");
+    height: 20px;
+    width: 20px;
 }
 
-.calendar-change-month-forward:hover,
+.calendar-change-month-forward {
+    background-image: url("img/calendar-arrow-right.svg");
+    height: 12px;
+    width: 12px;
+}
+
+.calendar-change-month-forward:hover {
+
+}
+
 .calendar-change-month-forward:active {
-    background-image: url("img/calendar-arrow-right-hover.svg");
-}
 
-.calendar-change-month-forward:rtl {
-    background-image: url("img/calendar-arrow-left.svg");
-}
-
-.calendar-change-month-forward:rtl:hover,
-.calendar-change-month-forward:rtl:active {
-    background-image: url("img/calendar-arrow-left-hover.svg");
 }
 
 .datemenu-date-label {
-    padding: .45em 1.5em 0em 1.5em;
+    padding: .4em 1.75em;
+    font-size: 10.5pt;
     color: #fff;
     font-weight: bold;
+    text-shadow: rgba(0,0,0,0.4) 0px -1px 0px;
 }
 
 .calendar-day-base {
-    font-size: 7.5pt;
+    color: #fff;
+    font-size: 8pt;
+    font-weight: bold;
+    padding: 0em 0.2em;
+    text-shadow: rgba(0,0,0,0.4) 0px -1px 0px;
+    font-size: 8pt;
+    height: 2.3em;
+    width: 2.3em;
     text-align: center;
-    width: 2.4em;
-    height: 2.4em;
 }
 
 .calendar-day-base:hover {
-    background-color: rgba(255,255,255,0.1);
+    background: #54a4e9;
 }
 
 .calendar-day-base:active {
-    background-gradient-direction: vertical;
-	background-gradient-start: rgba(255,255,255,0.2);
-	background-gradient-end: rgba(255,255,255,0.1);
-}
-
-.calendar-day-base:hover,
-.calendar-day-base:active {
+    background: #2A88D8;
+    box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.7);
     color: #fff;
 }
 
 .calendar-day-heading {
-    color: #ccc;
-    height: 2em;
+    font-weight: bold;
+    font-size: 7pt;
+    color: rgba(255,255,255,0.6);
+    padding-top: 2em;
 }
 
 .calendar-week-number {
-    color: #ccc;
-    font-weight: normal;
+    color: rgba(0,0,0,0.8);
+    font-size: 7pt;
 }
 
-/* Hack used in lieu of border-collapse - see calendar.js */
 .calendar-day {
-    border: 1px solid #444;
-    color: #ccc;
+    border: 1px rgba(0,0,0,0.3);
+    color: #fff;
+    font-weight: bold;
+    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.1);
+    text-shadow: rgba(0,0,0,0.7) 0px -1px 0px;
     border-top-width: 0;
     border-left-width: 0;
+    background-color: rgba(255,255,255,0.1);
 }
 
 .calendar-day-top {
@@ -119,48 +132,64 @@
     border-left-width: 1px;
 }
 
-.calendar-nonwork-day {
-    background-color: rgba(128,128,128,0.1);
+.calendar-work-day {
 }
 
-.calendar-today,
-.calendar-today:hover,
-.calendar-today:active {
-    background-gradient-direction: vertical;
-	background-gradient-start: rgba(255,255,255,0.3);
-	background-gradient-end: rgba(255,255,255,0.1);
-    color: #fff;
+.calendar-nonwork-day {
+}
+
+.calendar-today {
+    color: #ffffff;
     font-weight: bold;
+    background-color: rgba(0,0,0,0.7);
 }
 
 .calendar-other-month-day {
-    color: #666;
+    color: rgba(255,255,255,0.3);
+    box-shadow: inset 0px 2px 3px 0px rgba(0,0,0,0.3);
+    text-shadow: rgba(0,0,0,0.9) 0px -1px 0px;
+    background-color: rgba(0,0,0,0.5);
 }
 
 .calendar-day-with-events {
     font-weight: bold;
-    color: #fff;
+    box-shadow: inset 0px 1px 0px 0px #2A88D8;
 }
 
 .events-header-vbox {
-    spacing: 10pt;
-    padding: .6em 1.5em .45em 1.5em;
+    spacing: 10px;
+    padding-right: 1.75em;
+}
+
+.events-header {
+    height: 30px;
 }
 
 .events-header-hbox {
-    padding-top: .25em;
+    spacing: 8px;
+    padding: 0.3em;
 }
 
 .events-day-header {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #fff;
+    font-size: 8pt;
+    color: rgba(255,255,255,0.8);
+    font-weight: bold ;
+    padding-left: 1.8em;
+    padding-top: 0.8em;
+    text-shadow: rgba(255,255,255,0.8) 0px 1px 0px;
+}
+
+.events-day-header:rtl {
+    padding-left: 0em;
+    padding-right: 1.8em;
 }
 
 .events-day-dayname {
-    font-size: 9pt;
+    font-size: 8pt;
     color: #fff;
+    font-weight: bold;
     text-align: left;
+    text-shadow: rgba(255,255,255,0.5) 0px -1px 0px;
 }
 
 .events-day-dayname:rtl {
@@ -168,8 +197,9 @@
 }
 
 .events-day-time {
-    font-size: 9pt;
-    color: #ccc;
+    font-size: 8pt;
+    font-weight: bold;
+    color: #fff;
     text-align: right;
 }
 
@@ -178,24 +208,23 @@
 }
 
 .events-day-task {
-    font-size: 9pt;
-    color: #999;
+    font-size: 8pt;
+    font-weight: bold;
+    color: #fff;
 }
 
 .events-day-name-box {
-    min-width: 0pt;
+    min-width: 15px;
 }
 
 .events-time-box {
-    min-width: 53pt;
+    min-width: 53px;
     padding-right: 6pt;
 }
 
-.events-time-box:rtl {
-    padding-right: 0px;
-    padding-left: 6pt;
+.events-event-box {
 }
 
 .url-highlighter {
-    link-color: #ccccff;
+    link-color: #fff;
 }
