--- a/gnome-shell-frugalware-theme/theme/gdm.css
+++ b/gnome-shell-frugalware-theme/theme/gdm.css
@@ -1,160 +1,139 @@
-/* Frieze theme, version 1.1
- *   Copyright 2011, Nuxio
- *
- * Portions adapted from Fedora 16 default theme
- *   Copyright 2011, Red Hat, Inc.
- *
- * This program is free software; you can redistribute it and/or modify it
- * under the terms and conditions of the GNU Lesser General Public License,
- * version 2.1, as published by the Free Software Foundation.
- *
- * This program is distributed in the hope it will be useful, but WITHOUT ANY
- * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
- * more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with this program; if not, write to the Free Software Foundation,
- * Inc., 51 Franklin St - Fifth Floor, Boston, MA 02110-1301 USA.
- */
-
-/* Login dialog */
-
-.login-dialog {
-    padding: 20px;
-    max-height: 700px;
-    min-width: 350px;
-    font-size: 10pt;
-	color: #ccc;
-    background-gradient-direction: vertical;
-	background-gradient-start: rgba(0,0,0,0.4);
-	background-gradient-end: rgba(0,0,0,0.4);
-	box-shadow: inset 0px 0px 3px rgba(0,0,0,0.6);
-	border: 1px solid rgba(255,255,255,0.1);
-}
+/* Login Dialog */
 
 .login-dialog-title {
+    font-size: 14pt;
     font-weight: bold;
-    padding-top: 20px;
-    padding-bottom: 10px;
+    color: red;
+    padding-bottom: 2em;
 }
 
-/* User list */
-
-.login-dialog-user-list-view {
-    -st-vfade-offset: 0em;
-    padding-bottom: 10px;
-}
-
-.login-dialog-user-list {
-    spacing: 5px;
-}
-
-.login-dialog-user-list-item {
-    padding: 5px;
-    border-radius: 3px;
-    background-gradient-direction: vertical;
-	background-gradient-start: rgba(255,255,255,0.3);
-	background-gradient-end: rgba(255,255,255,0.1);
-	box-shadow: inset 0px 0px 2px rgba(255,255,255,0.3);
-	border: 1px solid rgba(0,0,0,0.2);
-}
-
-.login-dialog-user-list-item:hover,
-.login-dialog-user-list-item:active {
-	background-gradient-start: rgba(255,255,255,0.4);
-	box-shadow: inset 0px 0px 2px rgba(255,255,255,0.4);
-}
-
-.login-dialog-user-list-item .login-dialog-user-list-item-name {
-    font-size: 11pt;
-    color: #fff;
-    padding-left: 1em;
-}
-
-.login-dialog-user-list-item-vertical-layout {
-    spacing: 0px;
-}
-
-.login-dialog-user-list-item .login-dialog-user-list-item-focus-bin {
-    height: 0px;
-}
-
-.login-dialog-user-list-item-icon {
-    border-radius: 3px;
-    width: 48px;
-    height: 48px;
-}
-
-.login-dialog-not-listed-button:ltr {
-    text-align: right !important;
-}
-
-.login-dialog-not-listed-button:rtl {
-    text-align: left !important;
-}
-
-.login-dialog-not-listed-button:hover,
-.login-dialog-not-listed-button:active {
-    color: #fff;
-}
-
-/* Prompt */
-
-.login-dialog-prompt-layout {
-    min-height: 60px;
-    padding: 0 10px;
-    padding-bottom: 20px;
+.login-dialog {
+    border-radius: 16px;
+    min-height: 150px;
+    max-height: 700px;
+    min-width: 350px;
 }
 
 .login-dialog-prompt-fingerprint-message {
-    color: #fff;
+    font-size: 10.5pt;
 }
 
-.login-dialog-prompt-label {
+.login-dialog-user-list-view {
+    -st-vfade-offset: 1em;
+}
+
+.login-dialog-user-list {
+    spacing: 12px;
+}
+
+.login-dialog-user-list-item {
+    color: #666666;
+}
+
+.login-dialog-user-list-item:ltr {
+    padding-right: 1em;
+}
+
+.login-dialog-user-list-item:rtl {
+    padding-left: 1em;
+}
+
+.login-dialog-user-list-item .login-dialog-user-list-item-name {
+    font-size: 20pt;
+    padding-left: 1em;
+    color: #666666;
+}
+
+.login-dialog-user-list-item:hover .login-dialog-user-list-item-name {
+    color: white;
+}
+
+.login-dialog-user-list-item:focus .login-dialog-user-list-item-name {
+    color: white;
+    text-shadow: black 0px 2px 2px;
+}
+
+.login-dialog-user-list-item-vertical-layout {
+    spacing: 2px;
+}
+
+.login-dialog-user-list-item .login-dialog-user-list-item-focus-bin {
+    background-color: rgba(0,0,0,0.0);
+    height: 2px;
+}
+
+.login-dialog-user-list-item:focus .login-dialog-user-list-item-focus-bin {
+    background-color: #666666;
+}
+
+.login-dialog-user-list-item-icon {
+    border: 2px solid #8b8b8b;
+    border-radius: 8px;
+    width: 64px;
+    height: 64px;
+}
+
+.login-dialog-not-listed-button {
+    padding-top: 2em;
+}
+.login-dialog-not-listed-label {
+    font-size: 14pt;
     font-weight: bold;
-    padding-bottom: 5px;
+    color: #666666;
+}
+
+.login-dialog-prompt-layout {
+    padding-bottom: 64px;
+}
+.login-dialog-prompt-label {
+    color: white;
+    font-size: 20pt;
 }
 
 .login-dialog-prompt-entry {
-    padding: .45em;
-    background-color: rgba(0,0,0,0.3);
-    border: 1px solid rgba(255,255,255,0.1);
+    padding: 4px;
     border-radius: 4px;
-    box-shadow: inset 0px 0px 2px rgba(0,0,0,0.8);
-    caret-color: #ccc;
+    border: 2px solid #5656cc;
+    color: black;
+    background-color: white;
+    caret-color: black;
     caret-size: 1px;
-    color: #ccc;
+    width: 15em;
 }
-
-.login-dialog-prompt-entry:focus,
-.login-dialog-prompt-entry:hover {
-    background-color: rgba(0,0,0,0.4);
-    color: #fff;
-}
-
-.login-dialog-prompt-entry .capslock-warning {
-    icon-size: 1.1em;
-    warning-color: #ccc;
-}
-
-/* Session list */
 
 .login-dialog-session-list {
-    padding: 0 2px;
+    color: #ffffff;
+    font-size: 10.5pt;
+}
+
+.login-dialog-session-list-button {
+    padding: 4px;
+}
+
+.login-dialog-session-list-button:focus {
+    background-color: #4c4c4c;
+}
+
+.login-dialog-session-list-button:active {
+    background-color: #4c4c4c;
 }
 
 .login-dialog-session-list-button:hover {
-    color: #fff;
+    font-weight: bold;
 }
 
 .login-dialog-session-list-scroll-view {
-    border-radius: 3px;
+    background-gradient-start: rgba(80,80,80,0.3);
+    background-gradient-end: rgba(80,80,80,0.7);
     background-gradient-direction: vertical;
-	background-gradient-start: rgba(0,0,0,0.4);
-	background-gradient-end: rgba(0,0,0,0.4);
-    border: 1px solid rgba(255,255,255,0.1);
+    box-shadow: inset 0px 2px 4px rgba(0,0,0,0.9);
+    border-radius: 8px;
+    border: 1px solid rgba(80,80,80,1.0);
     padding: .5em;
+}
+
+.login-dialog-session-list-item:focus {
+    background-color: #666666;
 }
 
 .login-dialog-session-list-triangle {
@@ -162,7 +141,7 @@
 }
 
 .login-dialog-session-list-item-box {
-    spacing: .5em;
+    spacing: .25em;
 }
 
 .login-dialog-session-list-item-dot {
