--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-darknew.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-darknew.css
@@ -1,6 +1,6 @@
 /* Default color scheme */
 @define-color base_color #FFF;
-@define-color bg_color #DEDEDE;
+@define-color bg_color #333;
 @define-color tooltip_bg_color #000;
 @define-color selected_bg_color #4a90d9;
 @define-color text_color #2e3436;
@@ -39,4 +39,7 @@
 @define-color insensitive_bg_color #f4f4f2;
 @define-color insensitive_fg_color #a7aba7;
 
+@define-color treeview_odd #EEE;
+
 @import url("gtk-widgets.css");
+@import url("gtk-widgets-dark.css");
