--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk.css
@@ -4,6 +4,7 @@
 @define-color tooltip_bg_color #000;
 @define-color selected_bg_color #4a90d9;
 @define-color text_color #2e3436;
+@define-color insensitive_color #888;
 @define-color fg_color #2e3436;
 @define-color tooltip_fg_color #FFF;
 @define-color selected_fg_color #FFF;
