--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/sidebar.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/sidebar.css
@@ -15,7 +15,8 @@
     -GtkTreeView-vertical-separator: 1;
 }
 
-.sidebar.view:selected {
+.sidebar.view:selected,
+.sidebar.view:prelight:selected {
     border-style: solid;
     border-width: 1px 0 1px 0;
     -unico-inner-stroke-width: 1px 0 1px 0;
@@ -37,7 +38,8 @@
                     to (alpha (#fff, 0.10)));
 }
 
-.sidebar.view:selected:backdrop {
+.sidebar.view:selected:backdrop,
+.sidebar.view:prelight:selected:backdrop {
     background-image: -gtk-gradient (linear,
                     left top,
                     left bottom,
@@ -61,8 +63,10 @@ VarkaWidgetsHCollapsiblePaned,
 VarkaWidgetsHCollapsiblePaned.pane-separator,
 VarkaWidgetsHCollapsiblePaned.pane-separator:prelight,
 VarkaWidgetsHCollapsiblePaned.pane-separator:selected {
-    border-width:            0;
-    -GtkPaned-handle-size:    1;
+
+    -unico-centroid-texture: none;
+    border-width: 0;
+    -GtkPaned-handle-size: 1;
     background-image: none;
     background-color: shade (@bg_color, 0.75);
     
