--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets.css
@@ -37,11 +37,9 @@
     -GtkRange-stepper-spacing: 0;
     -GtkRange-trough-border: 3;
     -GtkRange-trough-under-steppers: 1;
-    -GtkScale-trough-border: 1;
     -GtkScrollbar-activate-slider: 1;
     -GtkScrollbar-min-slider-length: 50;
     -GtkScrollbar-slider-width: 15;
-    -GtkScrollbar-trough-border: 1;
     -GtkScrolledWindow-scrollbar-spacing: 0;
     -GtkScrolledWindow-scrollbars-within-bevel: 1;
     -GtkSeparatorMenuItem-horizontal-padding: 0;
@@ -79,7 +77,7 @@ GtkWindow {
  **********/
 *:insensitive {
     color: mix(@theme_fg_color, @theme_bg_color, 0.4);
-    text-shadow: 1px 1px alpha(@theme_base_color, 0.4);
+    text-shadow: 1px 1px alpha(@light_shadow, 0.4);
 }
 
 *:active {
@@ -109,24 +107,24 @@ GtkWindow {
  ******************/
 .button,
 GtkSwitch.slider {
-    box-shadow: inset 1px 1px alpha(@theme_base_color, 0.4),
-                inset -1px 0 alpha(@theme_base_color, 0.4);
+    box-shadow: inset 1px 1px alpha(@light_shadow, 0.4),
+                inset -1px 0 alpha(@light_shadow, 0.4);
 }
 
 .button:insensitive,
 GtkSwitch.slider:insensitive {
-    box-shadow: inset 1px 1px alpha(@theme_base_color, 0.2),
-                inset -1px 0 alpha(@theme_base_color, 0.2);
+    box-shadow: inset 1px 1px alpha(@light_shadow, 0.2),
+                inset -1px 0 alpha(@light_shadow, 0.2);
 }
 .button.default {
-    box-shadow: inset 1px 1px alpha(@theme_base_color, 0.2),
-                inset -1px 0 alpha(@theme_base_color, 0.2);
+    box-shadow: inset 1px 1px alpha(@light_shadow, 0.2),
+                inset -1px 0 alpha(@light_shadow, 0.2);
 }
 
 .button:active,
 .primary-toolbar .button:active {
-    box-shadow: inset 1px 1px alpha(@theme_fg_color, 0.06),
-                inset -1px -1px alpha(@theme_fg_color, 0.06);
+    box-shadow: inset 1px 1px alpha(@dark_shadow, 0.06),
+                inset -1px -1px alpha(@dark_shadow, 0.06);
 }
 
 .button:focus,
@@ -139,7 +137,7 @@ GtkSwitch.slider:insensitive {
 }
 
 .entry {
-    box-shadow: inset 1px 1px alpha(@theme_fg_color, 0.1);
+    box-shadow: inset 1px 1px alpha(@dark_shadow, 0.1);
 }
 
 .entry:focus {
@@ -210,7 +208,7 @@ GtkCalendar.button {
  * assistant *
  *************/
 GtkAssistant .sidebar .highlight {
-    color: @theme_fg_color;
+    color: @theme_text_color;
     font: bold;
 }
 
@@ -222,7 +220,7 @@ GtkAssistant .sidebar {
     border-width: 0 1px 0 0;
     padding: 12px;
 
-    color: @theme_fg_color;
+    color: @theme_text_color;
 }
 
 /**************
@@ -244,7 +242,6 @@ GtkAssistant .sidebar {
 }
 
 GtkSwitch.slider,
-GtkComboBox.combobox-entry .button,
 .button {
     background-image: -gtk-gradient(linear, left top, left bottom,
                                      from (shade(shade(@theme_bg_color, 1.02), 1.05)),
@@ -259,7 +256,6 @@ GtkComboBox.combobox-entry .button,
     color: @theme_fg_color;
 }
 
-GtkComboBox.combobox-entry .button:active,
 .button:active {
     background-image: -gtk-gradient(linear, left top, left bottom,
                                      from (shade(shade(@theme_bg_color, 0.85), 1.05)),
@@ -267,29 +263,23 @@ GtkComboBox.combobox-entry .button:active,
     border-color: shade(@theme_bg_color, 0.6);
 }
 
-GtkComboBox.combobox-entry .button:hover,
-GtkComboBox.combobox-entry .button:active:hover,
 .button:hover,
 .button:active:hover {
     background-image: -gtk-gradient(linear, left top, left bottom,
-                                     from (shade(shade(@theme_base_color, 0.9), 1.05)),
-                                     to (shade(shade(@theme_base_color, 0.9), 0.97)));
+                                     from (shade(@theme_bg_color, 1.15)),
+                                     to (shade(@theme_bg_color, 1.07)));
     border-top-color: shade(@theme_bg_color, 0.85);
     border-right-color: shade(@theme_bg_color, 0.78);
     border-bottom-color: shade(@theme_bg_color, 0.7);
     border-left-color: shade(@theme_bg_color, 0.78);
 }
 
-GtkComboBox.combobox-entry .button:focus,
-GtkComboBox.combobox-entry .button:active:focus,
 .button:focus,
 .button:hover:focus,
 .button:active:focus {
     border-color: shade(@theme_selected_bg_color, 0.8);
 }
 
-GtkSwitch.slider:insensitive,
-GtkComboBox.combobox-entry .button:insensitive,
 .button:insensitive {
     background-image: -gtk-gradient(linear, left top, left bottom,
                                      from (shade(shade(@theme_bg_color, 0.95), 1.05)),
@@ -398,6 +388,27 @@ GtkComboBox.combobox-entry .button:insensitive,
     border-width: 1px;
 
     border-radius: 3px;
+}
+
+/**************
+ * comboboxes *
+ **************/
+GtkComboBox {
+    padding: 0;
+
+    -GtkComboBox-arrow-scaling: 0.5;
+    -GtkComboBox-shadow-type: none;
+}
+
+GtkComboBox .separator {
+    /* always disable separators */
+    -GtkWidget-wide-separators: true;
+    -GtkWidget-horizontal-separator: 0;
+    -GtkWidget-vertical-separator: 0;
+}
+
+GtkComboBox .button {
+    color: @theme_fg_color;
 }
 
 /****************
@@ -597,8 +608,7 @@ GtkComboBox.combobox-entry .button:insensitive {
     border-color: shade(@theme_selected_bg_color, 0.8);
 }
 
-.entry:selected,
-.entry:selected:focus {
+.entry:selected {
     background-color: @theme_selected_bg_color;
 
     color: @theme_selected_fg_color;
@@ -611,8 +621,6 @@ GtkComboBox.combobox-entry .button:insensitive {
     color: mix(@theme_text_color, @theme_base_color, 0.4);
 }
 
-.primary-toolbar .entry.progressbar,
-.primary-toolbar .entry.progressbar,
 .entry.progressbar {
     background-image: -gtk-gradient(linear, left top, left bottom,
                                      from (shade(@theme_selected_bg_color, 1.15)),
@@ -853,7 +861,7 @@ GtkLabel:insensitive {
  * menu *
  ********/
 .menu {
-    background-color: shade(@theme_base_color, 0.98);
+    background-color: shade(@theme_bg_color, 1.18);
     border-width: 0;
     padding: 0;
 
@@ -869,7 +877,7 @@ GtkLabel:insensitive {
 .menu.button:active:insensitive,
 .menu.button:insensitive,
 .menu.button {
-    background-color: @theme_base_color;
+    background-color: shade(@theme_bg_color, 1.2);
     background-image: none;
     border-style: none;
 }
@@ -890,6 +898,11 @@ GtkLabel:insensitive {
 /***************
  * menubaritem *
  ***************/
+.menubar.menuitem,
+.menubar .menuitem {
+    padding: 3px 5px 3px 5px;
+}
+
 .menubar.menuitem:hover,
 .menubar .menuitem:hover {
     background-image: -gtk-gradient(linear, left top, left bottom,
@@ -993,21 +1006,19 @@ GtkComboBox .menuitem *:hover {
 }
 
 .notebook tab {
-    background-image: -gtk-gradient(linear, left top, left bottom,
-                                     from (shade(@theme_bg_color, 0.99)),
-                                     to (shade(@theme_bg_color, 0.99)));
+    background-image: none;
+    background-color: @theme_bg_color;
     border-color: shade(@theme_bg_color, 0.9);
 }
 
 .notebook tab:active {
-    background-image: -gtk-gradient(linear, left top, left bottom,
-                                     from (shade(@theme_bg_color, 1.05)),
-                                     to (shade(@theme_bg_color, 1.05)));
+    background-color: shade(@theme_bg_color, 1.05);
     border-color: shade(@theme_bg_color, 0.8);
 }
 
 .notebook tab GtkLabel {
     padding: 1px 1px 2px 1px;
+    color: @theme_fg_color;
 }
 
 .notebook tab.top {
@@ -1022,14 +1033,11 @@ GtkComboBox .menuitem *:hover {
 
 .notebook tab.right {
     padding: 3px;
-    background-color: @theme_bg_color;
     border-radius: 0 3px 3px 0;
 }
 
 .notebook tab.right:active {
     padding: 3px 4px;
-    background-image: none;
-    background-color: shade(@theme_bg_color, 1.05);
     border-width: 1px 1px 1px 0;
 }
 
@@ -1045,14 +1053,11 @@ GtkComboBox .menuitem *:hover {
 
 .notebook tab.left {
     padding: 3px;
-    background-color: @theme_bg_color;
     border-radius: 3px 0 0 3px;
 }
 
 .notebook tab.left:active {
     padding: 3px 4px;
-    background-image: none;
-    background-color: shade(@theme_bg_color, 1.05);
     border-width: 1px 0 1px 1px;
 }
 
@@ -1107,7 +1112,6 @@ GtkProgressBar {
     border-style: solid;
     border-width: 1px;
 
-    color: @theme_text_color;
     border-color: shade(@theme_bg_color, 0.7);
 }
 
@@ -1119,7 +1123,6 @@ GtkProgressBar {
 }
 
 /* level bars as used for password quality or remaining power */
-
 GtkLevelBar {
     -GtkLevelBar-min-block-width: 34;
     -GtkLevelBar-min-block-height: 3;
@@ -1146,7 +1149,7 @@ GtkLevelBar.vertical {
 
 .level-bar.indicator-continuous.fill-block {
     padding: 2px;
-    border-radius: 2px;
+    border-radius: 3px;
 }
 
 .level-bar.indicator-discrete.fill-block.horizontal {
@@ -1162,19 +1165,19 @@ GtkLevelBar.vertical {
    on the widget
 
 .level-bar.indicator-discrete.fill-block.horizontal:first-child {
-    border-radius: 2px 0 0 2px;
+    border-radius: 3px 0 0 3px;
 }
 
 .level-bar.indicator-discrete.fill-block.horizontal:last-child {
-    border-radius: 0 2px 2px 0;
+    border-radius: 0 3px 3px 0;
 }
 
 .level-bar.indicator-discrete.fill-block.vertical:first-child {
-    border-radius: 2px 2px 0 0;
+    border-radius: 3px 3px 0 0;
 }
 
 .level-bar.indicator-discrete.fill-block.vertical:last-child {
-    border-radius: 0 0 2px 2px;
+    border-radius: 0 0 3px 3px;
 }
 
 */
@@ -1404,19 +1407,12 @@ GtkScrolledWindow.frame {
     border-color: transparent;
 }
 
-.notebook .button .separator,
-.notebook .button.separator {
-    border-color: transparent;
-}
-
 .button .separator:insensitive,
 .button.separator:insensitive {
     border-color: transparent;
 }
 
-.menuitem.separator,
-.menubar .menuitem.separator,
-.primary-toolbar .menuitem.separator {
+.menuitem.separator {
     -GtkMenuItem-horizontal-padding: 0;
     -GtkWidget-separator-height: 1;
 
@@ -1431,6 +1427,7 @@ GtkScrolledWindow.frame {
 .sidebar.view,
 .sidebar .view {
     background-color: mix(shade(@theme_base_color, 0.9), shade(@theme_selected_bg_color, 1.35), 0.1);
+    color: @theme_text_color;
 }
 
 .sidebar .frame {
@@ -1442,25 +1439,18 @@ GtkScrolledWindow.frame {
  **************/
 .spinbutton.button:active,
 .spinbutton.button:insensitive,
-.notebook .spinbutton.button:active,
-.notebook .spinbutton.button:insensitive,
-.spinbutton.button,
-.notebook .spinbutton.button {
+.spinbutton.button {
     border-radius: 0;
     border-width: 0 0 0 1px;
 }
 
 .spinbutton.button:active:last-child,
 .spinbutton.button:insensitive:last-child,
-.notebook .spinbutton.button:active:last-child,
-.notebook .spinbutton.button:insensitive:last-child,
-.spinbutton.button:last-child,
-.notebook .spinbutton.button:last-child {
+.spinbutton.button:last-child {
     border-radius: 0 3px 3px 0;
 }
 
-.spinbutton.button,
-.notebook .spinbutton.button {
+.spinbutton.button {
     background-image: -gtk-gradient(linear, left top, left bottom,
                                      from (shade(shade(@theme_bg_color, 1.02), 1.05)),
                                      to (shade(shade(@theme_bg_color, 1.02), 0.97)));
@@ -1470,19 +1460,13 @@ GtkScrolledWindow.frame {
     border-left-color: shade(@theme_bg_color, 0.72);
 }
 
-.spinbutton.button:insensitive,
-.notebook .spinbutton.button:insensitive {
+.spinbutton.button:insensitive {
     background-image: -gtk-gradient(linear, left top, left bottom,
                                      from (shade(shade(@theme_bg_color, 0.95), 1.05)),
                                      to (shade(shade(@theme_bg_color, 0.95), 0.97)));
     border-color: shade(@theme_bg_color, 0.8);
 
     color: mix(@theme_fg_color, @theme_bg_color, 0.4);
-}
-
-.spinbutton,
-.spinbutton:hover {
-    color: @theme_fg_color;
 }
 
 /***********
@@ -1502,6 +1486,10 @@ GtkScrolledWindow.frame {
  * statusbar *
  *************/
 GtkStatusbar {
+    -GtkStatusbar-shadow-type: none;
+
+    padding: 3px;
+    color: @theme_fg_color;
 }
 
 /**********
@@ -1545,6 +1533,7 @@ GtkSwitch.trough:insensitive {
  ************/
 GtkTextView {
     background-color: @theme_base_color;
+    color: @theme_text_color;
 }
 
 /***********
@@ -1590,8 +1579,8 @@ GtkTextView {
 .primary-toolbar .button:active,
 .primary-toolbar .button:insensitive {
     background-image: -gtk-gradient(linear, left top, left bottom,
-                                     from (shade(shade(@theme_base_color, 0.9), 1.05)),
-                                     to (shade(shade(@theme_base_color, 0.9), 0.97)));
+                                     from (shade(@theme_bg_color, 1.15)),
+                                     to (shade(@theme_bg_color, 1.07)));
     border-color: shade(@theme_bg_color, 0.7);
 }
 
@@ -1604,8 +1593,8 @@ GtkTextView {
 
 .primary-toolbar .button:active:hover {
     background-image: -gtk-gradient(linear, left top, left bottom,
-                                     from (shade(shade(@theme_base_color, 0.9), 1.05)),
-                                     to (shade(shade(@theme_base_color, 0.9), 0.97)));
+                                     from (shade(@theme_bg_color, 1.15)),
+                                     to (shade(@theme_bg_color, 1.07)));
     border-top-color: shade(@theme_bg_color, 0.85);
     border-right-color: shade(@theme_bg_color, 0.78);
     border-bottom-color: shade(@theme_bg_color, 0.7);
@@ -1838,6 +1827,7 @@ GtkViewport.frame {
 
 .view {
     background-color: @theme_base_color;
+    color: @theme_text_color;
 }
 
 .view:selected,
