--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk.css
@@ -18,6 +18,10 @@
 @define-color theme_tooltip_bg_color @tooltip_bg_color;
 @define-color theme_tooltip_fg_color @tooltip_fg_color;
 
+/* shadow effects */
+@define-color light_shadow #fff;
+@define-color dark_shadow #000;
+
 /* misc colors used by gtk+ */
 @define-color info_fg_color rgb(80, 80, 80);
 @define-color info_bg_color rgb(250, 250, 130);
@@ -38,9 +42,14 @@
 @define-color wm_border_focused shade(@theme_bg_color, 0.7);
 @define-color wm_border_unfocused shade(@theme_bg_color, 0.8);
 
+/* lightdm greeter color scheme */
+@define-color lightdm_bg_color #242424;
+@define-color lightdm_fg_color #efefef;
+
 @import url("gtk-widgets.css");
 @import url("gtk-widgets-assets.css");
 @import url("apps/gnome-applications.css");
 @import url("apps/granite-widgets.css");
 @import url("apps/unity.css");
-@import url("apps/unity-greeter.css");
+@import url("apps/lightdm-unity-greeter.css");
+@import url("apps/lightdm-gtk-greeter.css");
