--- a/gnome-shell-frugalware-theme/theme/gnome-shell.css
+++ b/gnome-shell-frugalware-theme/theme/gnome-shell.css
@@ -601,6 +601,11 @@ StScrollBar StButton#vhandle:active {
 	color: rgba(0,0,0,0.0);
 }
 
+#panel .unicode-arrow { /* Removes the little arrow */
+	font-size: 0;
+	width: 0;
+}
+
 .panel-button #appMenuIcon {
 	app-icon-bottom-clip: 0px;
 	height: 0px;
@@ -762,7 +767,9 @@ StScrollBar StButton#vhandle:active {
 	padding-bottom: 32px;
 }
 
-.workspace-thumbnails-background {
+.workspace-thumbnails {
+	spacing: 11px;
+	visible-width: 32px; /* Amount visible before hovering */
 	background-color: rgba(0,0,0,0.1);
 	box-shadow: inset 0 0 3px 0 rgba(0,0,0,0.5);
 	border: 1px solid rgba(255,255,255,0.05);
@@ -771,21 +778,16 @@ StScrollBar StButton#vhandle:active {
 	padding: 11px 7px 11px 11px;
 }
 
-.workspace-thumbnails-background:rtl {
+.workspace-thumbnails:rtl {
 	border-right: 1px;
 	border-left: 0px;
 	border-radius: 0px 9px 9px 0px;
 	padding: 11px 11px 11px 7px;
 }
 
-.workspace-thumbnails {
-	spacing: 11px;
-	visible-width: 32px; /* Amount visible before hovering */
-}
-
 .workspace-thumbnail-indicator {
-	border: 4px solid rgba(255,255,255,0.7);
-	border-radius: 4px;
+	border: 1px solid rgba(255,255,255,0.7);
+	border-radius: 0px;
 	padding: 1px;
 }
 
