--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets-backgrounds.css
@@ -153,6 +153,10 @@ column-header .button:hover {
 	box-shadow: inset 0 2px 0 0 alpha(@theme_selected_bg_color, 0.3);
 }
 
+column-header.button:hover:backdrop,
+column-header .button:hover:backdrop {
+	box-shadow: inset 0 2px 0 0 alpha(@theme_fg_color, 0.18);
+}
 column-header.button:focus,
 column-header .button:focus,
 column-header.button:active,
