--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/other-applications.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/other-applications.css
@@ -99,6 +99,10 @@ NemoWindow .sidebar row:backdrop:selected {
 	text-shadow: none; 
 }
 
+NemoWindow .sidebar row:hover {
+	background-color: shade (@theme_bg_color, 0.97);
+}
+
 /* desktop mode */
 .nemo-desktop.nemo-canvas-item {
 	color: @theme_bg_color;
